fixing dark mode issues

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ ul {
     display:block;
     width: 20%;
     padding: 10px;
+    padding-top: 5px;
     background-color:bisque;
     font-weight: bold;
     transition: background-color 0.3s, ease;
